# pingkit

./: .gitignore  README.md  custom_models_tutorial.ipynb  pyproject.toml  readme.pypi.md  verification_summary.md
experiments/: README.md  embed.py  layer_eval.py  train_mult.py
experiments/fine_tune_experiments/: correct_refusal.py  embed.py  eval.py  incorrect_refusal.py  knowledge_lost.py  knowledge_neverhad.py  split.py  subset_correct.py  subset_incorrect.py  train.py  train_ping.py
experiments/general_use/: layer_eval.py
experiments/mmlu/: add_reasoning.py  calib_iso_ts.py  calib_iso_ts_drop.py  calibration.py  inf_mmlu.py  layer_eval_ab.py  layer_eval_plot.py  llm_inference_CoT_train.py  llm_inference_gemma.py  llm_inference_llama.py  plot_ab.py  train.py  train_eval.py  train_multilayer.py  train_subject.py
experiments/results/fig2a_layers/: Gemma-2-2b-it.json  Gemma-2-9b-it.json  Llama-3.1-8B-Instruct.json  Llama-3.1-8B.json  Llama-3.3-70B-Instruct.json  plot.py
experiments/results/fig2b_dataeff/: plot.py  train_size_Gemma-2-2b-it.json  train_size_Gemma-2-9b-it.json  train_size_Llama-3.1-8B-Instruct.json  train_size_Llama-3.1-8B.json  train_size_Llama-3.3-70B-Instruct.json
experiments/results/table1_mmlu/: mmlu_gemma2_test_top_token_bootstrap_stats.csv  mmlu_gemma2_test_top_token_bootstrap_stats_dropped.csv  mmlu_gemma_9b_test_CoT_bootstrap_stats.csv  mmlu_gemma_9b_test_CoT_bootstrap_stats_dropped.csv  mmlu_gemma_test_top_token_bootstrap_stats.csv  mmlu_gemma_test_top_token_bootstrap_stats_dropped.csv  (+6 more)
experiments/simpleqa_experiments/: bool_eval.py  check_acc.py  check_acc_bool.py  llm_gen_answers.py  llm_gen_answers_boolq.py  run.py  split_boolq.py
notebooks/: pingkit_walkthrough.ipynb
plug/: __init__.py  embedding.py  extraction.py  model.py
src/pingkit/: __init__.py  embedding.py  extraction.py  generate.py  model.py
src/pingkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
