[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plug"
version = "0.2.0"
description = "LLM classification toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }  #
authors = [{ name = "Your Name", email = "jacob.berkowitz2@cshs.org" }] 

dependencies = [
  "torch>=2.2",
  "torchvision",
  "transformers>=4.40",
  "pandas>=1.1",
  "numpy>=1.20",
  "scikit-learn>=1.0",
  "joblib>=1.2",
  "tqdm>=4.60",
  "matplotlib>=3.4",
  "rich>=13.0",
  "typer[all]>=0.9",
]

[project.scripts]
plug = "plug.cli:app"

[tool.setuptools]
packages = ["plug"]

[tool.setuptools.package-data]
plug = ["*.json", "*.txt", "*.yaml"]

[tool.setuptools.exclude-package-data]

