[build-system]
requires = [
  "setuptools>=77.0.0",   # first release that bumps metadata to 2.4
  "wheel",
  "build"
]
build-backend = "setuptools.build_meta"

[project]
name = "pingkit"
version = "0.4.6"
description = "LLM classification toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jacob Berkowitz", email = "jacob.berkowitz2@cshs.org" }]

dependencies = [
  "torch>=2.2",
  "torchvision",
  "transformers>=4.40",
  "pandas>=1.1",
  "numpy>=1.20",
  "scikit-learn>=1.0",
  "joblib>=1.2",
  "tqdm>=4.60",
  "matplotlib>=3.4",
  "rich>=13.0",
  "typer[all]>=0.9",
]

[project.scripts]
pingkit = "pingkit.cli:app"
# plug  = "pingkit.cli:app"


# ──────────────────────────
#  Setuptools configuration
# ──────────────────────────
[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pingkit = ["*.json", "*.txt", "*.yaml"]

[tool.setuptools.exclude-package-data]       # keep notebooks & .ipynb out of wheels
"*" = ["*.ipynb", "notebooks/*", "examples/*"]
